Correction du  Slidehow.jsx oubli de l'accolage dans la déclaration du composant foncitonnel Slidehow ({slides}) RESOLU + amélioration du style Apartmentpage.scss et des collapse

--- a/Kasa/src/styles/ApartmentPage.scss
+++ b/Kasa/src/styles/ApartmentPage.scss
@@ -60,7 +60,7 @@ main {
 }
 
 .title-location-tags {
-    margin-top: 2%;
+    margin-top: 6%;
 }
 
 .title {
@@ -142,5 +142,5 @@ main {
 
 .description-equipements {
     display: flex;
-    margin-top: 1%;
+    margin: 0% 0% 3% 7%;
 }
