--- a/Kasa/src/styles/Collapse.scss
+++ b/Kasa/src/styles/Collapse.scss
@@ -25,7 +25,7 @@
 .conteneur-collapse{
     display: grid;
     justify-items: center;
-    margin-left: 10%;
+    margin: 2% -10% 3% 9%;
 
 }
 
