--- a/Kasa/src/styles/main.scss
+++ b/Kasa/src/styles/main.scss
@@ -1,9 +1,9 @@
 body {
   font-family: 'Montserrat', sans-serif;
-  // display: flex;
+  display: flex;
   // flex-direction: column;
   // width: 1440px;
-  // justify-content: center;
+  justify-content: center;
   max-width: 1258px;
   padding-top: 40px;
   margin: 0 15%;
